feat(layout): Improve Glitch Effect

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.68.0",
     "storybook": "^7.2.3"
   }
 }
